--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FoodieContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Foodie;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "FoodieContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FoodieTest;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
